--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 NODE_LOGLEVEL=debug
 NODE_DBHOST= localhost
-NODE_DBUSER=webdb
-NODE_DBPWD=123
-NODE_DBSCHEMA=2021-forum
+NODE_DBUSER=newuser    
+NODE_DBPWD=password
+NODE_DBSCHEMA=forum
